fix css styling on margins and fonts and line spacing

--- a/client/src/app/components/requirement-category/requirement-display/requirement-display.component.scss
+++ b/client/src/app/components/requirement-category/requirement-display/requirement-display.component.scss
@@ -1,4 +1,11 @@
 :host,
+.display-title {
+  margin: 16px;
+}
 .course-list {
-  margin: 32px;
+  margin: 16px;
+}
+.courses {
+  margin: 16px;
+  font-size: 18px;
 }
